// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar.vue matches the snapshot 1`] = `
<div>
  <div
    id="nav"
  >
    <a
      href="/home"
    >
      Home
    </a>
     |
    
    <span>
      <a
        href="/signup"
      >
        Register
      </a>
       |
      
      <a
        href="/login"
      >
        Login
      </a>
    </span>
  </div>
</div>
`;

exports[`NavBar.vue matches the snapshot when is logged in 1`] = `
<div>
  <div
    id="nav"
  >
    <a
      href="/home"
    >
      Home
    </a>
     |
    
    <span>
      <a>
        Logout
      </a>
    </span>
  </div>
</div>
`;
